low price section done

--- a/index.html
+++ b/index.html
@@ -348,7 +348,46 @@
 
      </div>
     
-    
+    <!-- Low Price Section -->
+     <section class="lowPrice-section py-24">
+      <div class="container">
+        <h2 class="font-adlam text-4xl mb-10">Everyday low Price</h2>
+
+        <!-- grid parent -->
+         <div class="grid grid-cols-1 lg:grid-cols-3 gap-5">
+
+          <!-- grid child 1 -->
+          <div class="pet-grooming lg:col-span-2 bg-gradient-to-r from-[#F8CCFB] to-[#AFD2FD] rounded-xl">
+            <div class="content grid grid-cols-2 px-20 place-items-center">
+              <div class="content-txt">
+                <p>Under Price</p>
+                <h3 class="text-3xl font-adlam my-2">Pet Grooming Mitt</h3>
+                <h5 class="font-adlam text-2xl text-white">(Easy Hair Removal)</h5>
+                <h2 class="font-adlam text-5xl mt-2">$7.99</h2>
+              </div>
+              <div class="img">
+                <img src="assets/cute-dog-mid.png" alt="">
+              </div>
+            </div>
+          </div>
+
+          <!-- grid child 2 -->
+          <div class="pet-tShirt bg-gradient-to-r from-[#FFF9F4] to-[#F9E191] rounded-xl py-20 px-5">
+            <div class="grid grid-cols-2 place-items-center">
+              <div>
+                <h3 class="text-xl font-adlam">T-Shirt for Dogs</h3>
+                <h2 class="font-adlam text-5xl text-accent">$7.99</h2>
+              </div>
+              <div class="img">
+                <img class="h-96 w-96" src="assets/cute-pet-mid.png" alt="">
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+     </section>
 
 
 </body>
