--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- shortcut icon -->
+    <link rel="shortcut icon" href="assets/logo-header.png" type="image/x-icon">
+
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 
@@ -46,26 +49,23 @@
             },
           }
         }
-      </script>
+    </script>
 
-    <!-- Custom CSS -->
-     <!-- <link rel="stylesheet" href="style.css"> -->
-
-    <title>Pets Products</title>
+    <title>Cute Pets</title>
 </head>
 <body class="font-sora">
 <!-- Navbar -->
     <nav class="navbar bg-secondaryC">
-        <div class="container flex justify-between items-center">
-            <div class="logo flex items-center gap-2">
+        <div class="container w-[90%] flex justify-between items-center">
+            <div class="logo flex items-center gap-2 cursor-pointer">
                 <img src="assets/logo-header.png" alt="Logo">
                 <h3 class="text-[#111111] font-semibold hidden lg:inline-block">Browse<span class="text-accent">4</span>Pets</h3>
             </div>
             <div class="menu hidden lg:inline-block">
                 <ul class="flex gap-1">
-                    <li class="cursor-pointer"><a href="">Find a pet</a></li>
-                    <li class="cursor-pointer"><a href="">Breeds</a></li>
-                    <li class="cursor-pointer"><a href="">Contact us</a></li>
+                    <li class="cursor-pointer"><a class="text-lg" href="">Find a pet</a></li>
+                    <li class="cursor-pointer"><a class="text-lg" href="">Breeds</a></li>
+                    <li class="cursor-pointer"><a class="text-lg" href="">Contact us</a></li>
                 </ul>
             </div>
             <div class="nav-btn hidden lg:flex gap-5 items-center">
@@ -73,34 +73,37 @@
                   <i class="fa-regular fa-bell text-2xl cursor-pointer"></i>
                   <i class="fa-solid fa-magnifying-glass text-xl cursor-pointer"></i>
                 </div>
-                <button class="px-5 py-2 rounded-md border-solid border-2 border-accent hover:bg-accent hover:text-primaryC">Login</button>
+                <button class="px-5 py-2 rounded-md border-solid border-2 border-accent hover:bg-accent">Login</button>
                 <button class="px-5 py-2 rounded-md bg-accent border-transparent border-2 hover:bg-transparent hover:border-accent">Register</button>
             </div>
             <div class="menu-bars inline-block lg:hidden cursor-pointer">
-              <i class="fa-solid fa-bars"></i>
+              <i class="fa-solid fa-bars text-3xl"></i>
             </div>
         </div>
     </nav>
 
     <!-- Header Section -->
-    <header class="relative container flex flex-col md:flex-row items-start md:items-center">
-      <div class="header-title">
-        <h1>Lorem ipsum dolor sit amet.</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus impedit perferendis unde voluptatibus a amet voluptate nobis optio sequi consectetur.</p>
-        <button>Read More</button>
-      </div>
-      <div class="header-img">
-        <img src="assets/cat-big.png" alt="">
-      </div>
+    <header class="header-section py-5">
+      <div class="container w-[90%] grid grid-cols-1 relative">
+        <div class="header-title absolute lg:top-32">
+          <h1 class="font-adlam text-4xl lg:text-6xl">Pamper Your Pet,<br>Because They Deserve The Best</h1>
+          <p class="text-md lg:text-xl my-2 lg:my-5">Discover a world of treats, toys, and essentials handpicked for<br>your furry friends. Shop now and makeh tails wag with joy!</p>
+          <button class="btn btn-warning text-md lg:text-xl">Find a pet</button>
+        </div>
+        <div class="header-img pt-36 lg:pt-0">
+          <img src="assets/cat-big.png" alt="">
+        </div>
+    </div>
     </header>
 
     <!-- Category Section -->
-    <section class="category-section container my-10">
+    <section class="category-section my-10">
+      <div class="container w-[90%]">
       <h2 class="font-adlam text-4xl mb-10">Browse By Categories</h2>
       <div class="category-card grid grid-cols-2 lg:grid-cols-6 gap-5 align-middle justify-between my-5">
 
         <!-- Dog Card -->
-        <div class="card-item1 bg-cardColor rounded-md text-center">
+        <div class="card-item1 bg-cardColor rounded-md text-center shadow-md">
           <div class="cardBox m-5">
             <div class="avatar">
               <div class="p-5 rounded-full bg-white mb-3">
@@ -113,7 +116,7 @@
         </div>
 
         <!-- Fish Card -->
-        <div class="card-item2 bg-cardColor rounded-md text-center">
+        <div class="card-item2 bg-cardColor rounded-md text-center shadow-md">
           <div class="cardBox m-5">
             <div class="avatar">
               <div class="p-5 rounded-full bg-white mb-3">
@@ -126,7 +129,7 @@
         </div>
 
         <!-- Cat Card -->
-        <div class="card-item3 bg-cardColor rounded-md text-center">
+        <div class="card-item3 bg-cardColor rounded-md text-center shadow-md">
           <div class="cardBox m-5">
             <div class="avatar">
               <div class="p-5 rounded-full bg-white mb-3">
@@ -139,7 +142,7 @@
         </div>
 
         <!-- Birds Card -->
-        <div class="card-item4 bg-cardColor rounded-md text-center">
+        <div class="card-item4 bg-cardColor rounded-md text-center shadow-md">
           <div class="cardBox m-5">
             <div class="avatar">
               <div class="p-5 rounded-full bg-white mb-3">
@@ -152,7 +155,7 @@
         </div>
 
         <!-- SmallPet Card -->
-        <div class="card-item5 bg-cardColor rounded-md text-center">
+        <div class="card-item5 bg-cardColor rounded-md text-center shadow-md">
           <div class="cardBox m-5">
             <div class="avatar">
               <div class="p-5 rounded-full bg-white mb-3">
@@ -165,7 +168,7 @@
         </div>
 
         <!-- Rabit Card -->
-        <div class="card-item6 bg-cardColor rounded-md text-center">
+        <div class="card-item6 bg-cardColor rounded-md text-center shadow-md">
           <div class="cardBox m-5">
             <div class="avatar">
               <div class="p-5 rounded-full bg-white mb-3">
@@ -178,22 +181,27 @@
         </div>
 
       </div>
+      </div>
     </section>
     
     <!-- Trending Products Section -->
-     <div class="section product-section my-10 bg-secondaryC py-24">
-      <div class="container">
+     <div class="section product-section my-10 bg-secondaryC py-14 lg:py-24">
+      <div class="container w-[90%]">
 
       <div class="card-area">
         <h2 class="font-adlam text-4xl mb-10">Trending Pet Products</h2>
-         <div class="card-container grid grid-cols-2 lg:grid-cols-5 gap-3">
-          <!-- Big card -->
-            <div class="big-card relative bg-cardColor py-10 px-5 rounded-md col-span-2 row-span-3 border-gray-900 shadow-md">
-              <h3 class="font-adlam text-3xl">T- Shirt For Dogs</h3>
-              <p class="my-4">Discover a world of treats, toys, and essentials handpicked for</p>
-              <button class="px-5 py-2 rounded-md border-solid border-2 bg-secondaryC border-accent hover:bg-accent hover:text-primaryC">Shop Now</button>
-              <img class="absolute bottom-5 right-5" src="assets/cute-pet-small.png" alt="">
-            </div>
+
+        <div class="grid lg:grid-cols-3 lg:gap-3">
+
+            <!-- Big card -->
+          <div class="big-card relative bg-cardColor shadow-md rounded-md pt-10 pb-40 px-10 mb-3 lg:m-0">
+            <h3 class="font-adlam text-3xl">T- Shirt For Dogs</h3>
+            <p class="my-4">Discover a world of treats, toys, and essentials handpicked for</p>
+            <button class="px-5 py-2 rounded-md border-solid border-2 bg-secondaryC border-accent hover:bg-accent hover:text-primaryC">Shop Now</button>
+            <img class="absolute bottom-0 right-0 lg:bottom-5 lg:right-5" src="assets/cute-pet-small.png" alt="">
+          </div>
+
+         <div class="card-container grid grid-cols-2 lg:grid-cols-3 col-span-2 gap-3">
             <!-- card 1 -->
              <div class="card1 rounded-md bg-primaryC grid items-center justify-start border-gray-900 shadow-md">
               <div class="smallCard-container grid grid-cols-2 gap-3 p-4">
@@ -201,7 +209,7 @@
                   <img src="assets/cat-cartoon.png" alt="">
                 </div>
                 <div class="sc-content">
-                  <div class="rating grid grid-cols-2 items-center">
+                  <div class="rating flex gap-2">
                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                     <p>4.5</p>
                   </div>
@@ -217,7 +225,7 @@
                   <img src="assets/fish-cartoon.png" alt="">
                 </div>
                 <div class="sc-content">
-                  <div class="rating grid grid-cols-2 items-center">
+                  <div class="rating flex gap-2">
                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                     <p>4.5</p>
                   </div>
@@ -234,7 +242,7 @@
                   <img src="assets/bird-cartoon.png" alt="">
                 </div>
                 <div class="sc-content">
-                  <div class="rating grid grid-cols-2 items-center">
+                  <div class="rating flex-gap-2">
                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                     <p>4.5</p>
                   </div>
@@ -251,7 +259,7 @@
                   <img src="assets/rabbit-cartoon.png" alt="">
                 </div>
                 <div class="sc-content">
-                  <div class="rating grid grid-cols-2 items-center">
+                  <div class="rating flex gap-2">
                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                     <p>4.5</p>
                   </div>
@@ -268,7 +276,7 @@
                   <img src="assets/bird-cartoon.png" alt="">
                 </div>
                 <div class="sc-content">
-                  <div class="rating grid grid-cols-2 items-center">
+                  <div class="rating flex gap-2">
                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                     <p>4.5</p>
                   </div>
@@ -285,7 +293,7 @@
                   <img src="assets/pet-couch.png" alt="">
                 </div>
                 <div class="sc-content">
-                  <div class="rating grid grid-cols-2 items-center">
+                  <div class="rating flex gap-2">
                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                     <p>4.5</p>
                   </div>
@@ -302,7 +310,7 @@
                   <img src="assets/fish-cartoon.png" alt="">
                 </div>
                 <div class="sc-content">
-                  <div class="rating grid grid-cols-2 items-center">
+                  <div class="rating flex gap-2">
                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                     <p>4.5</p>
                   </div>
@@ -319,7 +327,7 @@
                   <img src="assets/pet-couch.png" alt="">
                 </div>
                 <div class="sc-content">
-                  <div class="rating grid grid-cols-2 items-center">
+                  <div class="rating flex gap-2">
                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                     <p>4.5</p>
                   </div>
@@ -330,13 +338,13 @@
              </div>
 
              <!-- card 9 -->
-             <div class="card1 rounded-md bg-primaryC grid items-center justify-start border-gray-900 shadow-md">
+             <div class="card1 rounded-md bg-primaryC lg:grid items-center justify-start border-gray-900 shadow-md hidden">
               <div class="smallCard-container grid grid-cols-2 gap-3 p-4">
                 <div class="sc-img px-5 py-5 bg-secondaryC rounded-md">
                   <img src="assets/rabbit-cartoon.png" alt="">
                 </div>
                 <div class="sc-content">
-                  <div class="rating grid grid-cols-2 items-center">
+                  <div class="rating flex gap-2">
                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                     <p>4.5</p>
                   </div>
@@ -347,43 +355,44 @@
              </div>
 
          </div>
+         </div>
       </div>
       </div>
 
      </div>
     
     <!-- Low Price Section -->
-     <section class="lowPrice-section py-24 mb-60">
-      <div class="container">
+     <section class="lowPrice-section py-10 mb-80">
+      <div class="container w-[90%]">
         <h2 class="font-adlam text-4xl mb-10">Everyday low Price</h2>
 
         <!-- grid parent -->
          <div class="grid grid-cols-1 lg:grid-cols-3 gap-5">
 
           <!-- grid child 1 -->
-          <div class="pet-grooming lg:col-span-2 bg-gradient-to-r from-[#F8CCFB] to-[#AFD2FD] rounded-xl">
-            <div class="content grid grid-cols-2 px-20 place-items-center">
-              <div class="content-txt">
+          <div class="pet-grooming lg:col-span-2 bg-gradient-to-r from-[#F8CCFB] to-[#AFD2FD] rounded-xl shadow-md">
+            <div class="content pb-64 lg:p-10 grid lg:grid-cols-2 lg:px-20 lg:place-items-center relative">
+              <div class="content-txt p-5">
                 <p>Under Price</p>
                 <h3 class="text-3xl font-adlam my-2">Pet Grooming Mitt</h3>
                 <h5 class="font-adlam text-2xl text-white">(Easy Hair Removal)</h5>
                 <h2 class="font-adlam text-5xl mt-2">$7.99</h2>
               </div>
-              <div class="img">
-                <img src="assets/cute-dog-mid.png" alt="">
-              </div>
+              <img class="absolute -right-28 -bottom-32 p-28 lg:hidden" src="assets/cute-dog-mid.png" alt="">
+              <img class="hidden lg:grid" src="assets/cute-dog-mid.png" alt="">
             </div>
           </div>
 
           <!-- grid child 2 -->
-          <div class="pet-tShirt relative bg-gradient-to-r from-[#FFF9F4] to-[#F9DF8A] rounded-xl py-20 px-5">
+          <div class="pet-tShirt relative bg-gradient-to-r from-[#FFF9F4] to-[#F9DF8A] rounded-xl py-24 lg:py-20 px-5 shadow-md">
             <div class="grid grid-cols-2 place-items-center">
               <div>
                 <h3 class="text-xl font-adlam">T-Shirt for Dogs</h3>
                 <h2 class="font-adlam text-5xl text-accent">$7.99</h2>
               </div>
-              <div class="img absolute bottom-5 right-5">
-                <img src="assets/cute-pet-mid.png" alt="">
+              <div class="img absolute bottom-1 right-1 lg:bottom-5 lg:right-5">
+                <img class="hidden lg:grid" src="assets/cute-pet-mid.png" alt="">
+                <img class="grid lg:hidden" src="assets/cute-pet-small.png" alt="">
               </div>
             </div>
           </div>
@@ -393,19 +402,18 @@
       </div>
      </section>
 
-
-
      <!-- Footer Section -->
-     <footer class="bg-footerColor pt-80 pb-20 relative">
+     <footer class="bg-footerColor lg:pt-80 lg:pb-20 relative">
 
     <!-- pawsome news -->
-    <div class="pawsome-news rounded-lg container w-5/6 bg-secondaryC grid grid-cols-2 place-items-center px-10 py-5 absolute left-1/2 top-0 transform -translate-x-1/2 -translate-y-1/2">
+    <div class=" pawsome-news shadow-md rounded-lg container w-[90%] bg-secondaryC grid grid-cols-1 lg:grid-cols-2 place-items-center py-0 absolute left-1/2 top-0 transform -translate-x-1/2 -translate-y-1/2">
       <!-- left area -->
-       <div class="cat grid place-items-center">
-        <img src="assets/cute-dog-mid.png" alt="">
+       <div class="cat grid place-items-center lg:p-16">
+        <img class="hidden lg:grid" src="assets/cute-pet-mid.png" alt="">
+        <img class="grid lg:hidden" src="assets/cute-pet-small.png" alt="">
        </div>
        <!-- right area -->
-        <div class="content grid place-content-center">
+        <div class="content grid place-content-center p-5 lg:p-0">
           <h2 class="font-adlam text-4xl mb-4">Get Pawsome News</h2>
           <p class="text-xl">Exclusive training tips, tricks, product deals and more.</p>
           <input type="text" placeholder="Enter email" class="text-lg input input-warning full my-4" />
@@ -414,7 +422,7 @@
     </div>
 
       <!-- Footer Container -->
-       <div class="container footer grid grid-cols-3 place-items-center">
+       <div class="container w-[90%] footer grid lg:grid-cols-3 lg:place-items-center pt-96 lg:pt-0 pb-10">
           <!-- footer left -->
            <div class="ft-left">
             <div class="logo flex gap-2 items-center">
